src/form.css
/* Base */

body {
  font-family: sans-serif;
}

.display-none {
  display: none !important;
}
.visibility-hidden {
  visibility: hidden !important;
}
.position-relative {
  position: relative;
}
button:focus {
  outline:none;
}
input.invalid-border:focus {
  box-shadow: 0px 0px 0px 0.2rem rgba(209, 29, 29, 0.25) !important;
}
input.valid-border:focus {
  box-shadow: 0px 0px 0px 0.2rem rgba(128, 214, 74, 0.25) !important;
}

/* Form */


.formBackground {
  box-sizing: border-box !important;
  height: 100%;
  position: relative;
  padding-left: 30px !important;
  padding-right: 30px !important;
  padding-top: 20px !important;
  background-color: #E0EDFF;
}

.paperSpace {
  margin: 15px;
  margin-bottom: 0px;
  border-radius: 6px !important;
  border-bottom-right-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
}


/* Slides */
.slideContent {
  padding: 25px 50px !important;
  overflow: visible;
}


/* verticaly centered */
.outer {
    display: table;
    /* position: absolute; */
    height: 100%;
    width: 100%;
}

.middle {
    display: table-cell;
    vertical-align: middle;
}

.inner {
    margin-left: auto;
    margin-right: auto;
    width: 570;
}
/* Navigation buttons */
.tabPanel {
  position: absolute !important;
  bottom: 20px !important;
  left: 50%;
  transform: translateX(-50%)
}

.tabButton {
  border-radius: 50% !important;
  min-width: 48px !important;
  padding: 0 !important;

}
.tabButton:focus {
  outline: none;
}
.tabButton:hover {
-webkit-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.66);
-moz-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.66);
box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.66);

}

/* next prev buttons */

.navBase {
  background-color: #006eee;

  margin: 0 15px 20px;
  padding: 0;
  position: relative;
  border-radius: 6px !important;
  border-top-right-radius: 0 !important;
  border-top-left-radius: 0 !important;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 5px 8px 0px rgba(0, 0, 0, 0.14), 0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.nextButton {
  border-radius: 6px !important;
  background-color: #006eee !important;
  bottom: 0px !important;
  margin: 0 !important;
  left: 50%;
  width: 50%;
  transform: translateX(-100%);
  z-index: 100;
  border-top-right-radius: 0 !important;
}
.nextButton:hover {
  z-index: 1000
}
.nextButton:focus {
  outline: none;
}

.prevButton {
  border-radius: 6px !important;
  background-color: #006eee !important;
  bottom: 0px !important;
  margin: 0 !important;
  left: 0;
  width: 50%;
  z-index: 100;
  border-top-left-radius: 0 !important;
}
.prevButton:hover {
  z-index: 1000
}
/* INVALID and VALID */
.valid-text {
  color: #80d64a !important;
}
.valid-border {
  border-color: #80d64a !important;
}
.invalid-text {
  color: #d11d1d !important;
}
.invalid-border {
  border-color: #d11d1d !important;
}
/* radio */
.focus {
  color: #495057;
  background-color: #fff;
  border-color: #80bdff;
  outline: 0;
  box-shadow: 0 0 0 .2rem rgba(0,123,255,.25);
}
.radioBundle {
  padding: 5px !important;
  padding-left: 25px !important;
}
.radio {
  padding-bottom: 10px;
  padding-left: 10px
}

.label-radio {
  transform: translateY(1px);
  display: inline-block;
  user-select: none;
  color: #676767;
 }

 /* date */
input[type="date"]:in-range::-webkit-datetime-edit-year-field, input[type="date"]:in-range::-webkit-datetime-edit-month-field, input[type="date"]:in-range::-webkit-datetime-edit-day-field, input[type="date"]:in-range::-webkit-datetime-edit-text { color: transparent; }


/* Floating label Class */
.label {
  display: inline-block;
  position:absolute;
  user-select: none;
  left: 15px;
  top: 8px;
  cursor: text;
  transition: all 150ms ease-in;
  color: #676767;
 }
/* when the label is activated, it jumps up (using translateY) */
.label.field-active {
  transform: translateY(-32px);
  font-size: .9em;
  color: #000;
  text-shadow: 1px 0 0 #fff, -1px 0 0 #fff, 2px 0 0 #fff, -2px 0 0 #fff, 0 1px 0 #fff, 0 -1px 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff;
 }
.floating-label {
  -webkit-appearance: none !important;
 }

 /* AutoComplete */

.no-suggestions {
  color: #999;
  padding: 0.5rem;
  font-size: .8rem;
  position: absolute;
  overflow-y: hidden;
  z-index: 10000;
  width: 100%;
}

.suggestions {
  border: 1px solid #999;
  background-color: #fff;
  width: 100%;
  border-top-width: 0;
  list-style: none;
  margin-top: 0;
  max-height: 200px;
  position: absolute;
  overflow-y: hidden;
  padding-left: 0;
  z-index: 10000;
}

.suggestions li {
  padding: 0.35rem;
}

.suggestion-active,
.suggestions li:hover {
  background-color: #006fee2d;
  cursor: pointer;
  font-weight: 700;
}

.suggestions li:not(:last-of-type) {
  border-bottom: 1px solid #999;
}

/* ScrollBar */

/* Let's get this party started */
::-webkit-scrollbar {
    width: 12px;
}

/* Track */
::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    -webkit-border-radius: 10px;
    border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
    -webkit-border-radius: 10px;
    border-radius: 10px;
    background: #006feed2;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
    box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
}
::-webkit-scrollbar-thumb:window-inactive {
	background: #006feed2;
}


@media only screen and (max-width: 600px) {
  .slideContent {
    padding: 25px 30px !important;
    overflow: visible;
    max-height: auto;
  }
  .formBackground {
    position: relative;
    padding-right: 0px !important;
    padding-left: 0px !important;
    padding-top: 0px !important;
    height: 100%;
    background-color: #E0EDFF;
  }
  .paperSpace {
    margin-right: 5px;
    margin-left: 5px;
  }
  .navBase {
    margin-right: 5px;
    margin-left: 5px;
  }
}

